--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "itubeder",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Gurdeep Singh",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
@@ -20,11 +19,13 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "4.4.0",
+    "@ionic-native/core": "^4.4.0",
+    "@ionic-native/photo-library": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
+    "cordova-plugin-photo-library": "^2.1.0",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -35,5 +36,12 @@
     "@ionic/app-scripts": "3.1.8",
     "typescript": "2.4.2"
   },
-  "description": "An Ionic project"
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-photo-library": {
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "To choose photos"
+      }
+    }
+  }
 }
