--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "itubeder",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "author": "Gurdeep Singh",
   "private": true,
   "scripts": {
@@ -19,13 +19,15 @@
     "@angular/http": "5.0.3",
     "@angular/platform-browser": "5.0.3",
     "@angular/platform-browser-dynamic": "5.0.3",
-    "@ionic-native/core": "^4.4.0",
+    "@ionic-native/core": "^4.5.3",
     "@ionic-native/photo-library": "^4.5.3",
     "@ionic-native/splash-screen": "4.4.0",
     "@ionic-native/status-bar": "4.4.0",
+    "@ionic-native/touch-id": "^4.5.3",
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "2.1.3",
     "cordova-plugin-photo-library": "^2.1.0",
+    "cordova-plugin-touch-id": "^3.3.1",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.2",
@@ -39,6 +41,7 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
+      "cordova-plugin-touch-id": {},
       "cordova-plugin-photo-library": {
         "PHOTO_LIBRARY_USAGE_DESCRIPTION": "To choose photos"
       }
