--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,7 @@ log.txt
 *.sublime-workspace
 .vscode/
 npm-debug.log*
+package-lock.json
 
 .idea/
 .sourcemaps/
@@ -28,6 +29,7 @@ plugins/
 plugins/android.json
 plugins/ios.json
 www/
+src/model/config.ts
 $RECYCLE.BIN/
 
 .DS_Store
